--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Sameer Site</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">  <!-- for adding favicon only need to add favicon file in same folder and this line write-->
+    <link rel="icon" href="favicon.ico">  
   </head>
   <body>
 
@@ -17,7 +17,7 @@
     </tr>
   </table>
 
-  <hr  class="dottedLine">  <!-- class is used for if we want to change only for this hr line andd not for all hr lines -->
+  <hr  class="dottedLine"> 
 
   <h3 class="pad">Education</h3>
   <ul>
